PUG-095: Simplifying academic module V;