@@ -1,7 +1,7 @@
 package com.pug.academic.presenter;
 
 import com.pug.academic.domain.Student;
-import com.pug.academic.infra.read.dtos.StudentViewWithCompletedHours;
+import com.pug.academic.infra.read.dtos.StudentView;
 import com.pug.academic.presenter.dtos.StudentCreateRequest;
 import com.pug.academic.presenter.dtos.StudentResponse;
 import com.pug.academic.presenter.dtos.StudentUpdateRequest;
@@ -10,15 +10,13 @@ import com.pug.academic.service.StudentReadService;
 import com.pug.academic.service.StudentService;
 import com.pug.academic.service.dtos.StudentCreateCommand;
 import com.pug.academic.service.dtos.StudentUpdateCommand;
+import com.pug.identity.service.PasswordService;
 import com.pug.identity.service.dtos.AccountCreateCommand;
 import com.pug.identity.service.dtos.AccountUpdateCommand;
 import com.pug.identity.service.dtos.UserCreateCommand;
 import com.pug.identity.service.dtos.UserUpdateCommand;
 import com.pug.shared.domain.enums.AccountType;
-import com.pug.shared.domain.enums.Campi;
-import com.pug.shared.exceptions.ResourceNotFoundException;
 import com.pug.shared.i18n.I18n;
-import com.pug.shared.presenter.dtos.UuidsRequest;
 import com.pug.shared.presenter.rest.ApiEnvelope;
 import com.pug.shared.utils.PresenterUtils;
 import com.pug.shared.utils.StringUtils;
@@ -26,6 +24,7 @@ import com.pug.shared.validation.UuidV7;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
 import jakarta.ws.rs.GET;
@@ -44,11 +43,11 @@ import jakarta.ws.rs.core.UriInfo;
 import java.net.URI;
 import java.util.List;
 import java.util.Locale;
-import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
- * REST resource for managing students in the academic system.
+ * REST resource for managing students.
  */
 @ApplicationScoped
 @Path("/academic/students")
@@ -61,6 +60,8 @@ public class StudentResource {
   @Inject
   StudentReadService readService;
   @Inject
+  PasswordService passwordService;
+  @Inject
   I18n i18n;
 
   @Context
@@ -69,155 +70,167 @@ public class StudentResource {
   HttpHeaders headers;
 
   /**
-   * Picks the best locale from the Accept-Language header.
+   * Retrieves a student by their Account ID.
    *
-   * @return the selected Locale.
+   * @param id the UUID of the student's account.
+   * @return the response containing the student details.
    */
-  private Locale locale() {
-    return PresenterUtils.pickLocale(headers.getAcceptableLanguages());
-  }
-
-  /**
-   * Creates a new student in the academic system.
-   *
-   * @param req the request containing student details
-   * @return a Response with the created student details
-   */
-  @POST
-  public Response create(@Valid StudentCreateRequest req) {
-    UserCreateCommand userCmd = new UserCreateCommand(req.cpf(), req.name());
-    AccountCreateCommand accountCmd =
-            new AccountCreateCommand(req.email(), AccountType.STUDENT, req.password(), userCmd);
-    Campi campusEnum = Campi.valueOf(req.campus().trim().toUpperCase(Locale.ROOT));
-
-    StudentCreateCommand studentCmd =
-            new StudentCreateCommand(
-                    accountCmd,
-                    req.academicRegistration(),
-                    campusEnum,
-                    req.courseId(),
-                    req.requiredHours(),
-                    req.startDate(),
-                    req.dueDate());
-
-    Student created = writeService.save(studentCmd);
-
-    StudentViewWithCompletedHours view = readService.getView(created.getAccountId());
-    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
-    URI location = uri.getAbsolutePathBuilder().path(created.getAccountId().toString()).build();
-    return Response.created(location).entity(ApiEnvelope.created(body)).build();
-  }
-
-  /**
-   * Updates an existing student's details.
-   *
-   * @param id  the UUID of the student's account to update
-   * @param req the request containing updated student details
-   * @return a Response with the updated student details
-   */
-  @PUT
+  @GET
   @Path("/{id}")
-  public Response update(@PathParam("id") @UuidV7 UUID id, @Valid StudentUpdateRequest req) {
-    UserUpdateCommand userCmd = null;
-    if (req.name() != null) {
-      userCmd = new UserUpdateCommand(null, req.name());
-    }
-
-    AccountUpdateCommand accountCmd = null;
-    if (req.email() != null || req.password() != null || userCmd != null) {
-      accountCmd = new AccountUpdateCommand(req.email(), req.password(), userCmd);
-    }
-
-    Campi campusEnum = null;
-    if (req.campus() != null) {
-      campusEnum = Campi.valueOf(req.campus().trim().toUpperCase(Locale.ROOT));
-    }
-
-    StudentUpdateCommand studentCmd =
-            new StudentUpdateCommand(
-                    accountCmd,
-                    req.academicRegistration(),
-                    campusEnum,
-                    req.courseId(),
-                    req.requiredHours(),
-                    req.startDate(),
-                    req.dueDate());
-
-    writeService.update(id, studentCmd);
-
-    var view = readService.getView(id);
-    var body = StudentPresenter.toResponse(view, locale(), i18n);
+  public Response get(@PathParam("id") @UuidV7 UUID id) {
+    StudentView view = readService.getViewByAccountId(id);
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
-   * Lists all students or searches for students based on a query.
+   * Lists students, optionally filtering by name search or course.
    *
-   * @param q                    the search query (optional)
-   * @param academicRegistration the academic registration to filter by (optional, busca exata)
-   * @return a Response with the list of students
+   * @param q        the search query (name).
+   * @param courseId the course ID to filter by.
+   * @return the response containing the list of students.
    */
   @GET
-  public Response listOrSearch(
-          @QueryParam("q") String q, @QueryParam("ar") String academicRegistration) {
+  public Response list(
+          @QueryParam("q") String q,
+          @QueryParam("courseId") @UuidV7 UUID courseId) {
 
-    List<StudentViewWithCompletedHours> views;
-    if (StringUtils.isNotEmpty(academicRegistration)) {
-      try {
-        StudentViewWithCompletedHours studentView = readService.getViewByAcademicRegistration(academicRegistration);
-        views = List.of(studentView);
-      } catch (ResourceNotFoundException e) {
-        views = List.of();
-      }
+    List<StudentView> views;
+
+    if (courseId != null) {
+      views = readService.listViewsByCourseId(courseId);
     } else if (StringUtils.isNotEmpty(q)) {
       views = readService.searchByName(q);
     } else {
       views = readService.listViews();
     }
-    List<StudentResponse> body =
-            views.stream().map(v -> StudentPresenter.toResponse(v, locale(), i18n)).toList();
+
+    List<StudentResponse> body = views.stream()
+            .map(v -> StudentPresenter.toResponse(v, locale(), i18n))
+            .collect(Collectors.toList());
+
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
-   * Retrieves a specific student's details by ID (Account ID).
+   * Retrieves a student by their academic registration.
    *
-   * @param id the UUID of the student's account
-   * @return a Response with the student's details
+   * @param registration the academic registration string.
+   * @return the response containing the student details.
    */
   @GET
+  @Path("/by-registration/{registration}")
+  public Response getByRegistration(@PathParam("registration") @NotNull String registration) {
+    StudentView view = readService.getViewByAcademicRegistration(registration);
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
+    return Response.ok(ApiEnvelope.ok(body)).build();
+  }
+
+  /**
+   * Retrieves a student by their email.
+   *
+   * @param email the email string.
+   * @return the response containing the student details.
+   */
+  @GET
+  @Path("/by-email/{email}")
+  public Response getByEmail(@PathParam("email") @NotNull String email) {
+    StudentView view = readService.getViewByEmail(email);
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
+    return Response.ok(ApiEnvelope.ok(body)).build();
+  }
+
+  /**
+   * Retrieves a student by their CPF.
+   *
+   * @param cpf the CPF string.
+   * @return the response containing the student details.
+   */
+  @GET
+  @Path("/by-cpf/{cpf}")
+  public Response getByCpf(@PathParam("cpf") @NotNull String cpf) {
+    StudentView view = readService.getViewByCpf(cpf);
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
+    return Response.ok(ApiEnvelope.ok(body)).build();
+  }
+
+  /**
+   * Creates a new student.
+   *
+   * @param req the student creation request.
+   * @return the response containing the created student.
+   */
+  @POST
+  public Response create(@Valid StudentCreateRequest req) {
+    String hashedPassword = passwordService.hash(req.password());
+
+    UserCreateCommand userCmd = new UserCreateCommand(req.cpf(), req.name());
+    AccountCreateCommand accountCmd =
+            new AccountCreateCommand(req.email(), AccountType.STUDENT, hashedPassword, userCmd);
+    StudentCreateCommand studentCmd = new StudentCreateCommand(
+            accountCmd,
+            req.academicRegistration(),
+            req.campus(),
+            req.courseId(),
+            req.requiredHours(),
+            req.startDate(),
+            req.dueDate());
+
+    Student created = writeService.save(studentCmd);
+    StudentView view = readService.getViewByAccountId(created.getAccountId());
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
+
+    URI location = uri.getAbsolutePathBuilder().path(created.getAccountId().toString()).build();
+    return Response.created(location).entity(ApiEnvelope.created(body)).build();
+  }
+
+  /**
+   * Updates an existing student.
+   *
+   * @param id  the UUID of the student's account.
+   * @param req the student update request.
+   * @return the response containing the updated student.
+   */
+  @PUT
   @Path("/{id}")
-  public Response get(@PathParam("id") @UuidV7 UUID id) {
-    Objects.requireNonNull(id, "id");
-    var view = readService.getView(id);
-    return Response.ok(ApiEnvelope.ok(StudentPresenter.toResponse(view, locale(), i18n))).build();
+  public Response update(@PathParam("id") @UuidV7 UUID id, @Valid StudentUpdateRequest req) {
+    String passwordHash = passwordService.hash(req.password());
+
+    UserUpdateCommand userCmd = new UserUpdateCommand(req.cpf(), req.name());
+    AccountUpdateCommand accountCmd = new AccountUpdateCommand(req.email(), passwordHash, userCmd);
+    StudentUpdateCommand studentCmd = new StudentUpdateCommand(
+            accountCmd,
+            req.academicRegistration(),
+            req.campus(),
+            req.courseId(),
+            req.requiredHours(),
+            req.startDate(),
+            req.dueDate());
+
+    writeService.update(id, studentCmd);
+    StudentView view = readService.getViewByAccountId(id);
+    StudentResponse body = StudentPresenter.toResponse(view, locale(), i18n);
+
+    return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
-   * Retrieves a specific student's details by Academic Registration.
+   * Deletes a student by their Account ID.
    *
-   * @param academicRegistration the academic registration of the student
-   * @return a Response with the student's details
-   */
-  @GET
-  @Path("/by-registration/{academicRegistration}")
-  public Response getByAcademicRegistration(
-          @PathParam("academicRegistration") String academicRegistration) {
-    Objects.requireNonNull(academicRegistration, "academicRegistration");
-    var view = readService.getViewByAcademicRegistration(academicRegistration);
-    return Response.ok(ApiEnvelope.ok(StudentPresenter.toResponse(view, locale(), i18n))).build();
-  }
-
-  /**
-   * Deletes multiple students by their Account IDs.
-   *
-   * @param req the request containing student account IDs to delete
-   * @return a Response with the result of the deletion
+   * @param id the UUID of the student's account.
+   * @return the response indicating success.
    */
   @DELETE
-  public Response delete(@Valid UuidsRequest req) {
-    Objects.requireNonNull(req, "req");
-    var deleted = writeService.deleteAll(req.ids());
+  @Path("/{id}")
+  public Response delete(@PathParam("id") @UuidV7 UUID id) {
+    writeService.delete(id);
     return Response.ok(ApiEnvelope.ok(null)).build();
+  }
+
+  /**
+   * Picks the best locale from the Accept-Language header.
+   */
+  private Locale locale() {
+    return PresenterUtils.pickLocale(headers.getAcceptableLanguages());
   }
 }
